Sutter Health/src/objects/SHMMN_Incumbent_Carrier__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>SHMMN Employer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SHMMN Incumbent Carrier</relationshipLabel>
        <relationshipName>SHMMN_Incumbent_Carrier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contain__c</fullName>
        <label>%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Incumbent_Carrier__c</fullName>
        <label>Incumbent Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Blue Shield</fullName>
                </value>
                <value>
                    <fullName>Cal Choice</fullName>
                </value>
                <value>
                    <fullName>Calpers</fullName>
                </value>
                <value>
                    <fullName>Chinese Community Health Plan</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Health Net</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Self Funded</fullName>
                </value>
                <value>
                    <fullName>Shp</fullName>
                </value>
                <value>
                    <fullName>United Health Care</fullName>
                </value>
                <value>
                    <fullName>Wha</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Product__c</fullName>
        <label>Sub Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>Indemnity</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SHMMN Incumbent Carrier</label>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>SHMMN Incumbent Carrier Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SHMMN Incumbent Carrier</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>